# my_macro_demo

./: Cargo.toml  README.md
my_derive/: Cargo.toml
my_derive/src/: attr_retry.rs  derive_getters.rs  fn_formula.rs  lib.rs
my_derive/tests/: tests.rs
my_derive/tests/ui/derive/: test_failed.rs  test_failed.stderr  test_pass.rs
use_my_derive/: Cargo.toml
use_my_derive/src/: main.rs
