[workspace]
members = [
  "my_derive",
  "use_my_derive"
]
resolver = "2"

[profile.release]
codegen-units = 1
lto = true
opt-level = "z"
panic = "abort"
strip = true

[profile.dev]
panic = "abort"

[profile.bench]
debug = 1

[profile.minimal]
codegen-units = 1
inherits = "release"
lto = true
opt-level = "z"
