[package]
edition = "2021"
name = "my_derive"
version = "0.1.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
proc-macro = true
doctest = false

[dependencies]
proc-macro2 = "1.0.70"
quote = "1.0.33"
syn = {version = "2.0.42", features = ["fold", "full"]}

[dev-dependencies]
trybuild = "1.0.86"


[[bin]]
name = "derive_pass"
path = "./tests/ui/derive/test_pass.rs"